--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "winston": "^3.19.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
