--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.969.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-validator": "^7.3.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.5.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.12",
     "winston": "^3.19.0"
   },
